--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,23 +4,7 @@
         <mat-form-field class="search-container">
           <mat-label> Ricerca per categoria </mat-label>
           <mat-select aria-label="Seleziona categoria" [(ngModel)]="selectedCategory" (selectionChange)="searchBy()" (focus)="onCategorySearchFieldFocus()" (blur)="onCategorySearchFieldBlur()">
-            <mat-option value="" class="stile-categoria" [class.selected-category]="selectedCategory === ''"> Tutte le categorie </mat-option>
-            <mat-option value="Action" class="stile-categoria" [class.selected-category]="selectedCategory === 'Action'"> Action</mat-option>
-            <mat-option value="Animation" class="stile-categoria" [class.selected-category]="selectedCategory === 'Animation'"> Animation</mat-option>
-            <mat-option value="Children" class="stile-categoria" [class.selected-category]="selectedCategory === 'Children'"> Children</mat-option>
-            <mat-option value="Classics" class="stile-categoria" [class.selected-category]="selectedCategory === 'Classics'"> Classics</mat-option>
-            <mat-option value="Comedy" class="stile-categoria" [class.selected-category]="selectedCategory === 'Comedy'"> Comedy</mat-option>
-            <mat-option value="Documentary" class="stile-categoria" [class.selected-category]="selectedCategory === 'Documentary'"> Documentary</mat-option>
-            <mat-option value="Drama" class="stile-categoria" [class.selected-category]="selectedCategory === 'Drama'"> Drama</mat-option>
-            <mat-option value="Family" class="stile-categoria" [class.selected-category]="selectedCategory === 'Family'"> Family</mat-option>
-            <mat-option value="Foreign" class="stile-categoria" [class.selected-category]="selectedCategory === 'Foreign'"> Foreign</mat-option>
-            <mat-option value="Games" class="stile-categoria" [class.selected-category]="selectedCategory === 'Games'"> Games</mat-option>
-            <mat-option value="Horror" class="stile-categoria" [class.selected-category]="selectedCategory === 'Horror'"> Horror</mat-option>
-            <mat-option value="Music" class="stile-categoria" [class.selected-category]="selectedCategory === 'Music'"> Music</mat-option>
-            <mat-option value="New" class="stile-categoria" [class.selected-category]="selectedCategory === 'New'"> New</mat-option>
-            <mat-option value="Sci-Fi" class="stile-categoria" [class.selected-category]="selectedCategory === 'Sci-Fi'"> Sci-Fi</mat-option>
-            <mat-option value="Sport" class="stile-categoria" [class.selected-category]="selectedCategory === 'Sport'"> Sport</mat-option>
-            <mat-option value="Travel" class="stile-categoria" [class.selected-category]="selectedCategory === 'Travel'"> Travel</mat-option>
+            <mat-option *ngFor="let category of this.categories" [value]="category.category_name" [class.selected-category]="selectedCategory === ''"> {{ category.category_name }}  </mat-option>
           </mat-select>
         </mat-form-field>
 
@@ -32,8 +16,8 @@
   <div class="table">
     <mat-table [dataSource]="datasource">
       <ng-container matColumnDef="title">
-        <th mat-header-cell *matHeaderCellDef >
-          <button (click)="orderBy('F.title')" mat-button tabindex="0">Titolo</button>
+        <th (click)="orderBy('F.title')" mat-header-cell *matHeaderCellDef >
+          <button mat-button tabindex="0">Titolo</button>
         </th>
         <td  mat-cell *matCellDef="let film">
           <button (click)="openMovieDetails(film)" mat-button tabindex="0">{{ film.title }}</button>
@@ -42,36 +26,36 @@
       </ng-container>
 
         <ng-container matColumnDef="release_year">
-          <th class="table-header" mat-header-cell *matHeaderCellDef>
-            <button (click)="orderBy('F.release_year')" mat-button tabindex="0">Anno di uscita</button>
+          <th (click)="orderBy('F.release_year')" class="table-header" mat-header-cell *matHeaderCellDef>
+            <button mat-button tabindex="0">Anno di uscita</button>
           </th>
           <td mat-cell *matCellDef="let film">{{ film.release_year }}</td>
         </ng-container>
 
         <ng-container matColumnDef="rating">
-          <th class="table-header" mat-header-cell *matHeaderCellDef>
-            <button (click)="orderBy('F.rating')" mat-button tabindex="0">Rating</button>
+          <th (click)="orderBy('F.rating')" class="table-header" mat-header-cell *matHeaderCellDef>
+            <button mat-button tabindex="0">Rating</button>
           </th>
           <td mat-cell *matCellDef="let film">{{ film.rating }}</td>
         </ng-container>
 
         <ng-container matColumnDef="genre">
-          <th class="table-header" mat-header-cell *matHeaderCellDef>
-            <button (click)="orderBy('genre')" mat-button tabindex="0">Genere</button>
+          <th (click)="orderBy('genre')" class="table-header" mat-header-cell *matHeaderCellDef>
+            <button mat-button tabindex="0">Genere</button>
           </th>
           <td mat-cell *matCellDef="let film">{{ film.genre }}</td>
         </ng-container>
 
         <ng-container matColumnDef="language">
-          <th class="table-header" mat-header-cell *matHeaderCellDef>
-            <button (click)="orderBy('language')" mat-button tabindex="0">Lingua</button>
+          <th (click)="orderBy('language')" class="table-header" mat-header-cell *matHeaderCellDef>
+            <button mat-button tabindex="0">Lingua</button>
           </th>
           <td mat-cell *matCellDef="let film">{{ film.language }}</td>
         </ng-container>
 
         <ng-container matColumnDef="cost">
-          <th class="table-header" mat-header-cell *matHeaderCellDef>
-            <button class="" (click)="orderBy('rental_rate')" mat-button tabindex="0">Costo</button>
+          <th (click)="orderBy('rental_rate')" class="table-header" mat-header-cell *matHeaderCellDef>
+            <button mat-button tabindex="0">Costo</button>
           </th>
           <td mat-cell *matCellDef="let film">{{ film.rental_rate }} € </td>
         </ng-container>
